# RamAnalyser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake_build.yml
src/: alias.h  analyser.cpp  analyser.h  input.cpp  input.h  main.cpp  minimizer_engine.cpp  processor.cpp  processor.h
src/analyser/: align_result.cpp  align_result.h  analyser.cpp  analyser.h  input.cpp  input.h
src/edlib/: edlib.cpp  edlib.h
src/ram/: minimizer_engine.cpp  minimizer_engine.h
test/: RamAnalyserTest.cmake  test.cpp
